--- a/index.html
+++ b/index.html
@@ -6,6 +6,29 @@
   <title>Prova Sistema Solare</title>
 </head>
 <body>
+  <!--Header-->
+  <header>
+
+  </header>
+  <!--/Header-->
+  <hr>
+  <!--Navigator-->
+  <nav>
+
+  </nav>
+  <!--/Navigator-->
+  <hr>
+  <!--Main-->
+  <main>
+
+  </main>
+  <!--/Main-->
+  <hr>
+  <!--Footer-->
+  <footer>
+
+  </footer>
+  <!--/Footer-->
   
 </body>
 </html>
