--- a/index.html
+++ b/index.html
@@ -17,6 +17,19 @@
   <!--Navigator-->
   <nav>
 
+    <ol>
+      <li><a href="">Mercurio</a></li>
+      <li><a href="">Venere</a></li>
+      <li><a href="">Terra</a></li>
+      <li><a href="">Luna</a></li>
+      <li><a href="">Marte</a></li>
+      <li><a href="">Giove</a></li>
+      <li><a href="">Saturno</a></li>
+      <li><a href="">Urano</a></li>
+      <li><a href="">Nettuno</a></li>
+      <li><a href="">Pluto</a></li>
+    </ol>
+
   </nav>
   <!--/Navigator-->
   <hr>
