--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <link rel="stylesheet" href="style.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="keywords" content="astronomia, pianeti, satelliti" />
+  <meta name="description" content="Sito dedicato all'astronomia" />
   <title>Prova Sistema Solare</title>
 </head>
 <body>
@@ -221,7 +223,10 @@
   <hr>
   <!--Footer-->
   <footer>
-
+    <marquee behavior="-1" direction="scroll">
+      <img src="img/sole.jpg" alt="">
+    </marquee>
+    &hearts;&hearts;&hearts;R-G&hearts;&hearts;&hearts;
   </footer>
   <!--/Footer-->
   
