File index.html terminato

--- a/index.html
+++ b/index.html
@@ -223,12 +223,11 @@
   <hr>
   <!--Footer-->
   <footer>
-    <marquee behavior="-1" direction="scroll">
-      <img src="img/sole.jpg" alt="">
-    </marquee>
-    &hearts;&hearts;&hearts;R-G&hearts;&hearts;&hearts;
+    
+      <marquee behavior="-1" direction="scroll"><img src="img/super-sole-con-coda.png" alt=""></marquee>
+      &hearts;&hearts;&hearts;R-G&hearts;&hearts;&hearts;
   </footer>
   <!--/Footer-->
-  
+
 </body>
 </html>
